# python-crabber

./: .gitignore  Makefile  README.md  publish  publish.sh  pyproject.toml  readme.md  requirements.txt  setup.py  test
crabber/: __init__.py  exceptions.py  models.py  utils.py
docs/: conf.py  crabber.rst  index.rst  installation.rst  requirements.txt
docs/_build/doctrees/: crabber.doctree  environment.pickle  index.doctree  modules.doctree
docs/_build/html/: .buildinfo  crabber.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: modules.rst.txt
docs/reference/: exceptions.rst  index.rst  models.rst
docs/usage/: basics.rst  index.rst  simple_bot.rst
tests/: context.py  test_basic.py
